[package]
name = "xkcdgenerator"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "xkcdgenerator"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.10"
serde = "1.0.145"
serde_json = "1.0.85"
wasmcloud-interface-httpserver = "0.7"
wasmcloud-interface-httpclient = "0.7"
wasmcloud-interface-numbergen = "0.7"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
